Search by English title 🦝

--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -23,6 +23,7 @@ const recipes = entries.map(({ data }) => ({
 	tags: data.tags,
 	time: data.time,
 	title: data.title,
+	titleEnglish: data.titleEnglish,
 	vegan: data.vegan,
 	vegetarian: data.vegetarian,
 }));
