Fix page titles

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import { Content } from '../data/about.md';
 
 <Layout
 	url="/about/"
-	title="About"
+	pageTitle="About Tacohuaco"
 	description="We’ve started Tacohuaco as a better way of keeping notes about foodses we cook, and it evolves together with our cooking needs…"
 	component={AboutPage}
 >
