--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ function getNewRecipes(recipes: Recipe[]): Recipe[] {
 
 <Layout
 	url="/"
-	title="Tacohuaco: favorite recipes of a Mexican-Russian couple"
+	pageTitle="Tacohuaco: favorite recipes of a Mexican-Russian couple"
 	component={MainPage}
 	props={{
 		newRecipes: getNewRecipes(allRecipes),
