--- a/src/pages/cuisines/[...slug].astro
+++ b/src/pages/cuisines/[...slug].astro
@@ -25,7 +25,7 @@ export async function getStaticPaths() {
 				cuisine,
 				recipes: entries
 					.filter((x) => x.data.cuisines.includes(cuisine))
-					.map(recipeEntryToRecipe),
+					.map((x) => recipeEntryToRecipe(x)),
 			},
 		};
 	});
