--- a/src/pages/tags/[...slug].astro
+++ b/src/pages/tags/[...slug].astro
@@ -31,7 +31,7 @@ export async function getStaticPaths() {
 				tag,
 				recipes: entries
 					.filter((x) => x.data.tags.includes(tag))
-					.map(recipeEntryToRecipe),
+					.map((x) => recipeEntryToRecipe(x)),
 			},
 		};
 	});
