--- a/src/pages/shops.astro
+++ b/src/pages/shops.astro
@@ -2,7 +2,7 @@
 import sortBy from 'lodash/sortBy';
 import Layout from '../layouts/Layout.astro';
 import { ShopsPage } from '../templates/ShopsPage';
-import { type Shop } from '../types/Shop';
+import type { Shop } from '../types/Shop';
 import shopsRaw from '../data/shops.json';
 
 const shops = sortBy(shopsRaw as Shop[], 'title');
