--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Layout from '../layouts/Layout.astro';
 import { MainPage } from '../templates/MainPage';
 import { recipeEntryToRecipe } from '../util/recipeEntryToRecipe';
 import type { Recipe } from '../types/Recipe';
+import { SEASONS } from '../util/olivier/regions/valencia';
 
 const entries = await getCollection('recipes');
 const allRecipes = entries.map((x) => recipeEntryToRecipe(x));
@@ -24,6 +25,13 @@ function getCurrentSeasonRecipes(recipes: Recipe[]): Recipe[] {
 function getNewRecipes(recipes: Recipe[]): Recipe[] {
 	return orderBy(recipes, (x) => -x.createdAt).slice(0, NEW_RECIPES_TO_SHOW);
 }
+
+function getSeasonalIngredients() {
+	const inSeason = Object.entries(SEASONS).filter(([, months]) =>
+		months.includes(CURRENT_SEASON)
+	);
+	return inSeason.map(([ingredient]) => ingredient);
+}
 ---
 
 <Layout
@@ -33,5 +41,6 @@ function getNewRecipes(recipes: Recipe[]): Recipe[] {
 	props={{
 		newRecipes: getNewRecipes(allRecipes),
 		recipesInSeason: getCurrentSeasonRecipes(allRecipes),
+		ingredientsInSeason: getSeasonalIngredients(),
 	}}
 />
