Remove favorite flags and change the A/M favorites to just favorites in the database

--- a/src/pages/flags/[...slug].astro
+++ b/src/pages/flags/[...slug].astro
@@ -8,8 +8,7 @@ import type { Recipe } from '../../types/Recipe';
 import { ALL_FLAGS, type FlagName } from '../../types/Flags';
 
 export const TITLES: Record<FlagName, string> = {
-	artemsFavorite: 'Artem’s favorite recipes',
-	margaritasFavorite: 'Margarita’s favorite recipes',
+	favorite: 'Our favorite recipes',
 	vegan: 'Vegan recipes',
 	vegetarian: 'Vegetarian recipes',
 	dairyFree: 'Dairy free recipes',
