--- a/src/components/Metatags.astro
+++ b/src/components/Metatags.astro
@@ -26,7 +26,7 @@ const {
 	hygraphImageHandle,
 } = Astro.props;
 
-const descriptoinText = removeMarkdown(description);
+const descriptionText = removeMarkdown(description);
 
 const isArticle = url.startsWith('/recipes/');
 const canonicalUrl = `${SITE_URL}${url}`;
@@ -47,12 +47,12 @@ const imageUrl = hygraphImageHandle
 	content="width=device-width, initial-scale=1, shrink-to-fit=no"
 />
 <link rel="icon" href={TACO_SVG} />
-<meta name="description" content={descriptoinText} />
+<meta name="description" content={descriptionText} />
 <meta property="og:type" content={isArticle ? 'article' : 'website'} />
 <meta property="og:title" content={title} />
 <meta property="og:url" content={canonicalUrl} />
 <meta property="og:site_name" content={SITE_TITLE} />
-<meta property="og:description" content={descriptoinText} />
+<meta property="og:description" content={descriptionText} />
 <meta name="twitter:creator" content={`@${SITE_TWITTER}`} />
 <link
 	rel="canonical"
