--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @layer reset, base, tokens, recipes, utilities;
 
+@view-transition {
+	navigation: auto;
+}
+
 @font-face {
 	font-family: 'ProximaNova';
 	src: url('/fonts/Proxima-Nova-Regular.woff2') format('woff2');
