Tweak coffee page copy

--- a/src/pages/coffee/index.astro
+++ b/src/pages/coffee/index.astro
@@ -6,7 +6,7 @@ import { COFFEE_RECIPES } from '../../util/cafe';
 
 <Layout
 	url="/coffee/"
-	title="Coffee recipes"
+	title="Tiny coffee survival guide"
 	description="How we brew coffee using different brewers: Chemex, V60, Aeropress, French press, Moka pot, Turkish coffee…"
 	component={CoffeeRecipesPage}
 	props={{ coffeeRecipes: COFFEE_RECIPES }}
