--- a/src/pages/cal.astro
+++ b/src/pages/cal.astro
@@ -5,6 +5,7 @@ import { CalendarPage } from '../templates/CalendarPage';
 import { recipeEntryToRecipe } from '../util/recipeEntryToRecipe';
 import { SEASONS } from '../util/olivier/regions/valencia';
 import { ALL_MONTHS, Month, MONTH_NAMES } from '../util/olivier';
+import { PageWithTitle } from '../templates/PageWithTitle';
 
 const recipeEntries = await getCollection('recipes');
 const allRecipes = recipeEntries.map((x) => recipeEntryToRecipe(x));
@@ -28,9 +29,14 @@ const months = ALL_MONTHS.map((month) => ({
 }));
 ---
 
-<Layout
-	url="/cal"
-	title="Calendar"
-	component={CalendarPage}
-	props={{ months, allRecipes }}
-/>
+<Layout url="/cal" title="Calendar">
+	<PageWithTitle url="/cal" title="Calendar">
+		<CalendarPage
+			url="/cal"
+			title="Calendar"
+			months={months}
+			allRecipes={allRecipes}
+			client:load
+		/>
+	</PageWithTitle>
+</Layout>
